<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cubsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.cubsapp.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_roster"
        android:name="com.example.cubsapp.ui.roster.RosterFragment"
        android:label="@string/menu_roster"
        tools:layout="@layout/fragment_roster" />
</navigation>